# shopping_points_optimiser

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  Dockerfile  Dockerfile.worker  LICENSE  MIGRATION_SQLITE_TO_POSTGRES.md  README.md  RELEASE.md  alembic.ini  app.py  check_sqlite.py  cleanup_and_restart.ps1  cleanup_and_restart.sh  docker-compose.override.yml.example  docker-compose.prod.override.yml  docker-compose.yml  docker-entrypoint.sh  init-test-db.sh  job_queue.py  models.py  notifications.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-worker.txt  requirements.txt  setup.py  shop_dedup.py
.github/agents/: spo_agent.agent.md
.github/workflows/: ci.yml  deploy.yml  extension-release.yml
bonus_programs/: __init__.py  miles_and_more.py  payback.py  registry.py  shoop.py  topcashback.py
browser_extension/: README.md  background.js  config.js  content.js  manifest.json  popup.css  popup.html  popup.js
docs/: ADMIN_SYSTEM.md  AGENT.md  CHANGELOG.md  DATA_MODEL_AND_WORKFLOWS.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FEATURE_DEVELOPMENT_WORKFLOW.md  FINAL_VERIFICATION_CHECKLIST.md  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  JOB_QUEUE_README.md  LANDING_PAGE_TUTORIAL_DRAFT.md  MANUALLY_IMPORT_FORMAT.md  MIGRATION_SQLITE_TO_POSTGRES.md  MILES_AND_MORE_SCRAPER_IMPLEMENTATION.md  MILES_AND_MORE_TECHNICAL_REFERENCE.md  MILES_AND_MORE_USER_GUIDE.md  PLATFORM_RESEARCH.md  PRE_COMMIT_SETUP.md  PRODUCTION_CHECKLIST.md  PROD_DEPLOYMENT_SAFETY.md  QUICKSTART.md  RATE_PRIVACY_MIGRATION.md  README.md  README_MILES_AND_MORE_INDEX.md  UNRAID_HOSTING.md  WORKFLOW_DIAGRAM.md
migrations/: env.py
scrapers/: __init__.py  and_charge_scraper.py  base.py  example_scraper.py  letyshops_scraper.py  miles_and_more_scraper.py  payback_scraper.py  payback_scraper_js.py  shoop_scraper.py  topcashback_scraper.py
scripts/: README.md  check_version.py  cleanup_pip.ps1  create_test_accounts.py  create_test_coupon.py  db_upgrade.py  docker-build.ps1  docker-build.sh  load_sqlite_data.py  migrate_sqlite_to_postgres.py  package-extension.ps1  pre_deployment_check.py  reset_db.py  run_scraper.py  run_topcashback.py  setup_test_environment.py  sync_secrets_to_github.ps1  sync_version.py  test-rebuild.ps1  test-rebuild.sh  test_migration.py  test_production_migration.py
shops/: __init__.py  example_shop.py
spo/: __init__.py  extensions.py  models.py  utils.py  version.py  worker_tasks.py
spo/models/: core.py  (+7 more)
templates/: admin.html  admin_scheduled_job_form.html  admin_scheduled_job_logs.html  admin_scheduled_jobs.html  admin_users.html  admin_v2.html  base.html  create_proposal.html  index.html  login.html  profile.html  proposals.html  register.html  result.html  review_scraper_proposal.html  suggest_shop.html  suggest_shop_success.html
tests/: conftest.py  demo_admin.py  demo_dedup.py  test_admin_clear_shops.py  test_and_charge_scraper.py  test_coupon_display.py  test_coupon_import_assist.py  test_fuzzy_matching.py  test_letyshops_scraper.py  test_letyshops_scraper_detail.py  test_mam_scraper.py  test_merge_mechanism.py  test_notifications.py  test_payback_scraper.py  test_scheduler.py  test_scraper.py  test_scraper_dedup.py  test_scrapers_unit.py  test_services.py  test_shoop_scraper.py  test_shop_dedup.py  test_shop_dropdown_search.py  test_shop_names_api.py  test_smoke.py  test_smoke_api.py  test_sqlalchemy_2_models.py  test_stale_jobs.py  test_topcashback_scraper.py  test_variant_rescore.py
(+43 files in other folders)
